--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
       border: 0;
     }
 	
+	#infoText {
+		margin-top: 10px;
+		font-size: 50px;
+		opacity: 1;
+		transition: opacity 2s;
+		display: flex;
+		justify-content: center;
+        align-items: center;
+	}
+	
 	.map-card {
       padding: 0;  /* Kein Padding innerhalb der Karte */
     }
@@ -69,11 +79,13 @@
     }
 	
 	.containerHeader {
-		margin-top: 100px;
+		margin-top: 10px;
 		background-color: rgba(144, 238, 144, 0.7);
 		padding: 30px;
 		border-radius: 10px;
 		animation: zoomIn 1.5s ease-out;
+		position: relative;
+		overflow: hidden; 
 	}
 	@keyframes zoomIn {
 		from { opacity: 0; transform: scale(0.8); }
@@ -98,7 +110,7 @@
 	
     .snowflake {
       position: absolute;
-      top: -10px;
+      top: -50px;
       color: white;
       font-size: 1em;
       opacity: 0.8;
@@ -134,6 +146,9 @@
     <li><a href="imp.html">Impressum</a></li>
     <li><a href="ds.html">Datenschutz</a></li>
   </ul>
+  
+	<div id="infoText"> 
+	</div>
   
    <div class="containerHeader"> 
 	  <div class="header">
@@ -241,12 +256,39 @@
 	}
 
 	var divHeader = document.querySelector('.containerHeader');
-	
+
 	divHeader.addEventListener('animationend', function() {
 	    createSnowflake();
 		// Schneeflocken regelmäßig erstellen
 		setInterval(createSnowflake, 150); // Häufigkeit der Schneeflocken erhöhen
 	});
+	
+	const textElement = document.getElementById('infoText');
+        
+	function getRandomColor() {
+		const letters = '0123456789ABCDEF';
+		let color = '#';
+		for (let i = 0; i < 6; i++) {
+			color += letters[Math.floor(Math.random() * 16)];
+		}
+		return color;
+	}
+
+	function animateInfoText() {
+		textElement.textContent = schlagwoerter[Math.floor(Math.random() * schlagwoerter.length)];
+		textElement.style.color = getRandomColor();
+		textElement.style.opacity = 1;
+
+		setTimeout(() => {
+			textElement.style.opacity = 0;
+		}, 2000);
+
+		setTimeout(() => {
+			animateInfoText();
+		}, 4000);
+	}
+
+	animateInfoText();
 
   </script>
 </body>
