--- a/imp.html
+++ b/imp.html
@@ -121,6 +121,7 @@
 		  <a href="#" data-target="mobile-nav" class="sidenav-trigger right"><i class="material-icons" style="font-size: 48px;">menu</i></a>
 		  <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li><a href="index.html">Home</a></li>
+			<li><a href="ref.html">Bildergalerie</a></li>					
 			<li><a href="imp.html">Impressum</a></li>
 			<li><a href="ds.html">Datenschutz</a></li>
 		  </ul>
@@ -131,6 +132,7 @@
   <!-- Side Navigation for Mobile -->
   <ul class="sidenav" id="mobile-nav">
     <li><a href="index.html">Home</a></li>
+	<li><a href="ref.html">Bildergalerie</a></li>			
     <li><a href="imp.html">Impressum</a></li>
     <li><a href="ds.html">Datenschutz</a></li>
   </ul>
