--- a/imp.html
+++ b/imp.html
@@ -28,45 +28,68 @@
       padding: 0;
     }
 
-    .container {
-      max-width: 100%; 
-      height: auto;
-      margin-top: 20px;
-      padding: 20px;
-      text-align: center;
-      background-color: white;
-    }
+	.container {
+		width: 90%;
+		max-width: 800px;
+		margin: 50px auto;
+		background-color: #f9f9f9;
+		padding: 20px 5%;
+		border-radius: 10px;
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	}
 
-    p {
-      font-size: 18px; 
-      color: black; 
-    }
+	h1 {
+		font-size: 2rem;
+		color: #2c3e50;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	h2 {
+		font-size: 1.5rem;
+		color: #34495e;
+		margin-top: 20px;
+	}
+
+	p {
+		font-size: 1rem;
+		line-height: 1.6;
+		margin-bottom: 15px;
+	}
+
+	@media (max-width: 768px) {
+	  .container {
+		  padding: 15px 3%;
+	  }
+	  h1 {
+		  font-size: 1.8rem;
+	  }
+	  h2 {
+		  font-size: 1.2rem;
+	  }
+	  p {
+		  font-size: 0.9rem;
+	  }
+	}
+
+	@media (max-width: 480px) {
+	  h1 {
+		  font-size: 1.5rem;
+	  }
+	  h2 {
+		  font-size: 1rem;
+	  }
+	  p {
+		  font-size: 0.8rem;
+	  }
+	}
+
 	
     iframe {
       width: 100%;  /* Volle Breite des übergeordneten Containers */
       height: 450px; /* Feste Höhe */
       border: 0;
-    }
-	
-	.map-card {
-      padding: 0;  /* Kein Padding innerhalb der Karte */
-    }
-	
-    .card-content {
-      text-align: left;
-    }
-
-    .card-content p {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      align-items: center; /* Vertikale Ausrichtung des Icons und Texts */
-    }
-
-    .card-content i {
-      color: green; /* Farbe des Häkchens */
-      margin-right: 10px; /* Abstand zwischen Icon und Text */
-    }
+    }	
 	
 	.containerHeader {
 		margin-top: 100px;
@@ -85,25 +108,7 @@
 	}
 	.header h1 {
 		font-size: 3rem;
-	}
-	
-	.cardAnimation {
-		transition: transform 0.3s ease, box-shadow 0.3s ease;
-	}
-
-	.cardAnimation:hover {
-		transform: scale(1.05); /* Vergrößert die Karte leicht */
-		box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Fügt einen Schatten hinzu */
-	}
-	
-    .snowflake {
-      position: absolute;
-      top: -10px;
-      color: white;
-      font-size: 1em;
-      opacity: 0.8;
-      user-select: none;
-    }	
+	}	
 
 	
   </style>
